--- a/2Crimson.theme.css
+++ b/2Crimson.theme.css
@@ -1,22 +1,22 @@
 {} /* Backgrounds */
 
 .app {
-    background-image: url("https://i.imgur.com/BAmLqvy.jpg")!important;
+    background-image: url("https://i.imgur.com/QbHiRAX.jpg");
     background-size: cover !important;
     background-position: center !important;
 }
 .callout-backdrop {
-    background: url("https://i.imgur.com/BAmLqvy.jpg")!important;
+    background: url("https://i.imgur.com/QbHiRAX.jpg");
     background-size: cover !important;
     background-position: center !important;
     opacity:0.9 !important;
 }
 .bda-backdrop {
-    background: url("https://i.imgur.com/BAmLqvy.jpg")!important;
+    background: url("https://i.imgur.com/QbHiRAX.jpg")!important;
     background-size: cover!important;
 }
 #pubs-container:before {
-	background: url("https://i.imgur.com/BAmLqvy.jpg")!important;
+	background: url("https://i.imgur.com/QbHiRAX.jpg")!important;
     background-size: cover!important;
 }
 
