Update and rename svo.theme.css to svo2.theme.css

--- a/svo2.theme.css
+++ b/svo2.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Chrome.Crimson","description":"My first Theme. haha!.","author":"SaveeOztra (sVo.)","version":"1.0"}*//{}
+//META{"name":"Chrome_Crimson","description":"My first Theme.","author":"SaveeOztra (sVo.)","version":"1.0"}*//{}
 
 /*
 Hex color for everything: #9f0000
